Fix: CSS 수정 overflow 속성 제거

--- a/styles/content/choicePaymentModal.module.scss
+++ b/styles/content/choicePaymentModal.module.scss
@@ -3,7 +3,6 @@
 .wrap {
   width: 100%;
   height: 90%;
-  overflow: auto;
   z-index: variable.$MODAL;
   position: absolute;
   bottom: 0;
