--- a/styles/content/choiceStoreModal.module.scss
+++ b/styles/content/choiceStoreModal.module.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: 90%;
   padding: 0 20px;
-  overflow: auto;
   position: absolute;
   z-index: variable.$MODAL;
   bottom: 0;
