--- a/styles/content/myPageContent.module.scss
+++ b/styles/content/myPageContent.module.scss
@@ -3,7 +3,6 @@
 .wrap {
   padding: 19px;
   background-color: variable.$BG-002;
-  overflow: auto;
 
   .info-wrap {
     padding: 15px 15px 20px;
